--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 align="center" role="h1">Portfolio Page</h1>
+	<div><img height="150" role="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEXKSzLqnAsuP-Tjy-49LvLg16HMMWCiZttw&usqp=CAU" alt="passport"></div>
+	<h3>Manoranjan Pradhan</h2>
+	<label for="link">
+		<a href="https://www.linkedin.com/home?originalSubdomain=in" id="link">LinkedIn Profile</a>
+	</label>
+	<section id="skills">
+		<ul role="ul">
+			<li role="li">HTML</li>
+			<li role="li">CSS</li>
+			<li role="li">JavaScript</li>
+			<li role="li">ReactJs</li>
+		</ul>
+	</section>
+	<section id="projects">
+		<p><u>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, error?</u></p>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
