--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav role="navigation"></nav>
 	<h1 align="center" role="heading">Portfolio Page</h1>
 	<div><img height="150" role="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEXKSzLqnAsuP-Tjy-49LvLg16HMMWCiZttw&usqp=CAU" alt="passport"></div>
 	<h3>Manoranjan Pradhan</h2>
